--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
 }
 
 h1 {
+    max-width: 100%;
     font-weight: 400;
     font-size: 32px;
     line-height: 38px;
@@ -28,6 +29,7 @@ h1 {
 input {
     height: 74px;
     width: 342px;
+    max-width: 100%;
     padding-left: 20px;
     font-weight: 500;
     font-size: 40px;
@@ -40,6 +42,7 @@ input {
 }
 .input {
     margin-right: 62px;
+    max-width: 100%;
 }
 
 button {
@@ -47,6 +50,7 @@ button {
     background: #AEC346;
     box-shadow: 0 18px 40px 0 rgba(174, 195, 70, 0.35);
     width: 342px;
+    max-width: 100%;
     height: 72px;
     color: white;
     font-weight: 700;
@@ -64,3 +68,34 @@ button:active {
     background: #8B9F36;
 }
 
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 24px;
+        line-height: 28px;
+        margin-top: 80px;
+    }
+
+    img {
+        width: 100%;
+        max-width: 300px;
+        margin-top: 20px;
+    }
+
+    input {
+        width: 90%;
+        max-width: 100%;
+        height: 60px;
+        font-size: 24px;
+        margin: 0 20px 20px 20px;
+    }
+
+    button {
+        width: 90%;
+        max-width: 100%;
+    }
+
+    .input {
+        margin-right: 0;
+    }
+    
+}
